[tool.poetry]
name = "data-engineer-ce"
version = "0.1.0"
description = ""
authors = ["Jonathan Welch <Jonathan@albertinvent.com>"]
readme = "README.md"
packages = [{include = "data_engineer_ce", from ="src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.8.5"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
